--- a/web/index.html
+++ b/web/index.html
@@ -107,26 +107,25 @@ main {
 
 (async () => {
 
-// const dataUrl = "http://aoe-stats.davidbraden.co.uk/api/player-stats.json";
-// const result = await fetch(dataUrl);
-// const data = await result.json();
-const data = [{"name":"Simie","games":64,"overallWinRate":0.453125,"winRateLast10":0.5,"results":[false,false,true,false,true,false,true,false,true,true]},{"name":"Venko","games":40,"overallWinRate":0.475,"winRateLast10":0.3,"results":[false,false,false,true,false,false,true,false,true,false]},{"name":"David","games":53,"overallWinRate":0.49056603773584906,"winRateLast10":0.5,"results":[true,false,false,false,true,true,true,false,true,false]},{"name":"RAD","games":52,"overallWinRate":0.6538461538461539,"winRateLast10":0.7,"results":[true,true,true,false,true,true,true,false,false,true]},{"name":"waluwewe","games":44,"overallWinRate":0.3181818181818182,"winRateLast10":0.3,"results":[false,true,false,false,true,false,false,false,false,true]},{"name":"Calum","games":54,"overallWinRate":0.6111111111111112,"winRateLast10":0.7,"results":[true,true,true,true,false,true,false,true,false,true]},{"name":"Tedo","games":10,"overallWinRate":0.8,"winRateLast10":0.8,"results":[true,true,true,true,false,true,false,true,true,true]},{"name":"watman","games":34,"overallWinRate":0.6764705882352942,"winRateLast10":0.6,"results":[false,false,false,true,true,true,true,false,true,true]},{"name":"Jomoes","games":35,"overallWinRate":0.37142857142857144,"winRateLast10":0.4,"results":[false,false,true,false,false,false,true,true,true,false]},{"name":"andkins","games":8,"overallWinRate":0.375,"winRateLast10":0.375,"results":[false,true,false,false,false,true,false,true]},{"name":"Le Ng","games":2,"overallWinRate":0.5,"winRateLast10":0.5,"results":[true,false]},{"name":"bethatk","games":5,"overallWinRate":0.4,"winRateLast10":0.4,"results":[false,false,true,false,true]}];
+const dataUrl = "http://aoe-stats.davidbraden.co.uk/api/player-stats.json";
+const result = await fetch(dataUrl);
+const data = await result.json();
 
-data.forEach(player => {
+data.forEach(playerStats => {
     const template = document.createElement('template');
     template.innerHTML = `
     <div class="player">
         <div class="playerName">
-            ${player.name}
+            ${playerStats.player.name}
         </div>
         <div class="winRate">
-            ${player.overallWinRate.toFixed(2) * 100}%
+            ${playerStats.overallWinRate.toFixed(2) * 100}%
         </div>
         <div class="results">
-            ${player.results.map(r => r ? '<i class="bi bi-check-circle-fill"></i>': '<i class="bi bi-x-circle-fill"></i>').join('')}
+            ${playerStats.results.map(r => r ? '<i class="bi bi-check-circle-fill"></i>': '<i class="bi bi-x-circle-fill"></i>').join('')}
         </div>
         <div class="totalGames">
-            ${player.games}
+            ${playerStats.games}
         </div>
     </div>
     `;
