--- a/web/index.html
+++ b/web/index.html
@@ -173,7 +173,7 @@ const togglePosition = (el) => {
 
 let clickAction = (el) => console.log(el);
 
-const ORIGINAL_CIVS = ['Goths', 'Franks', 'Britons', 'Vikings', 'Teutons', 'Chinese', 'Japanese', 'Mongols', 'Persions', 'Saracens', 'Turks', 'Byzantines', 'Celts']
+const ORIGINAL_CIVS = ['Goths', 'Franks', 'Britons', 'Vikings', 'Teutons', 'Chinese', 'Japanese', 'Mongols', 'Persians', 'Saracens', 'Turks', 'Byzantines', 'Celts']
 const CIVS_2 = ['Aztecs', 'Mayans', 'Koreans', 'Huns', 'Spanish']
 const CIVS_3 = ['Incas', 'Italians', 'Magyars', 'Slavs']
 const CIVS_4 = ['Malians', 'Ethiopians', 'Berbers', 'Portugese']
