Make data call path relative

--- a/web/index.html
+++ b/web/index.html
@@ -128,7 +128,7 @@ form {
 
 (async () => {
 
-const dataUrl = "http://aoe-stats.davidbraden.co.uk/api/player-stats.json";
+const dataUrl = "api/player-stats.json";
 const result = await fetch(dataUrl);
 const data = await result.json();
 
